# shoot_me

./: .gitignore  CMakeLists.txt  README.md  main.c
cmake/Modules/: CMakeLists.txt  FindFMOD.cmake
include/: define.h  game.h  target_helper.h  threading.h  utilities.h  window.h
src/: game.c  target_helper.c  threading.c  utilities.c  window.c
